--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,7 +68,8 @@
     inset: 0;
     z-index: 9999;
     pointer-events: none;
-    opacity: 0.12;
+    opacity: 0.7;
+    mix-blend-mode: soft-light;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='300'%3E%3Cfilter id='g'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23g)'/%3E%3C/svg%3E");
     background-repeat: repeat;
   }
